login/reg/recovery

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fd",
+  "name": "cards",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://expppirience.github.io/fd/",
+  "homepage": "https://idogmat.github.io/cards/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
